// Copyright 2025 The Ray Authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//  http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

import "src/ray/protobuf/events/base.proto";

package ray.rpc.events;

message RayEventsData {
  repeated RayEvent events = 1;
}

message AddEventRequest {
  // Event data
  RayEventsData events_data = 1;
}

message AddEventStatus {
  // follow the code in `src/ray/common/status.h`
  int32 status_code = 1;
  string status_message = 2;
}

message AddEventReply {
  AddEventStatus status = 1;
}

service AggregatorService {
  rpc AddEvents(AddEventRequest) returns (AddEventReply);
}
